--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "node-geocoder": "^4.0.0",
     "nodemon": "^2.0.15",
-    "sharp": "^0.30.0"
+    "sharp": "^0.30.0",
+    "socket.io": "^4.4.1"
   }
 }
