--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "nodemon": "^2.0.15",
     "sharp": "^0.30.0",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.18.0",
+    "eslint-config-xo": "^0.41.0"
   }
 }
