socket bug removed

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ CLOUDINARY_CLOUD_NAME = dab0zremd
 CLOUDINARY_API_KEY = 177735967995951
 
 CLOUDINARY_SECRET_KEY = Rpeh_JfUP4QSwpRTfoXzeY_UIKk
+
+GOOGLE_MAPS_API_KEY = AIzaSyCZNlij87KQYPzTOGJ-PsgCirnOnUNv5-Q
